toy2/strange_error.txt
    [163 of 220] Compiling Distribution.Make ( Distribution/Make.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Make.o )
    [164 of 220] Compiling Distribution.FieldGrammar.Pretty ( Distribution/FieldGrammar/Pretty.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/FieldGrammar/Pretty.o )
    [165 of 220] Compiling Distribution.FieldGrammar.Parsec ( Distribution/FieldGrammar/Parsec.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/FieldGrammar/Parsec.o )
    [166 of 220] Compiling Distribution.FieldGrammar ( Distribution/FieldGrammar.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/FieldGrammar.o )
    [167 of 220] Compiling Distribution.PackageDescription.FieldGrammar ( Distribution/PackageDescription/FieldGrammar.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/PackageDescription/FieldGrammar.o )
    [168 of 220] Compiling Distribution.PackageDescription.PrettyPrint ( Distribution/PackageDescription/PrettyPrint.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/PackageDescription/PrettyPrint.o )
    [169 of 220] Compiling Distribution.PackageDescription.Parsec ( Distribution/PackageDescription/Parsec.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/PackageDescription/Parsec.o )
    [170 of 220] Compiling Distribution.FieldGrammar.FieldDescrs ( Distribution/FieldGrammar/FieldDescrs.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/FieldGrammar/FieldDescrs.o )
    [171 of 220] Compiling Distribution.Types.InstalledPackageInfo.FieldGrammar ( Distribution/Types/InstalledPackageInfo/FieldGrammar.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Types/InstalledPackageInfo/FieldGrammar.o )
    [172 of 220] Compiling Distribution.InstalledPackageInfo ( Distribution/InstalledPackageInfo.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/InstalledPackageInfo.o )
    [173 of 220] Compiling Distribution.Types.ComponentLocalBuildInfo ( Distribution/Types/ComponentLocalBuildInfo.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Types/ComponentLocalBuildInfo.o )
    [174 of 220] Compiling Distribution.Types.TargetInfo ( Distribution/Types/TargetInfo.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Types/TargetInfo.o )
    [175 of 220] Compiling Distribution.Simple.Program.HcPkg ( Distribution/Simple/Program/HcPkg.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Simple/Program/HcPkg.o )
    [176 of 220] Compiling Distribution.Simple.PackageIndex ( Distribution/Simple/PackageIndex.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Simple/PackageIndex.o )
    [177 of 220] Compiling Distribution.Types.LocalBuildInfo ( Distribution/Types/LocalBuildInfo.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Types/LocalBuildInfo.o )
    [178 of 220] Compiling Distribution.Simple.LocalBuildInfo ( Distribution/Simple/LocalBuildInfo.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Simple/LocalBuildInfo.o )
    [179 of 220] Compiling Distribution.Simple.Test.Log ( Distribution/Simple/Test/Log.hs, .stack-work/dist/x86_64-linux-tinfo6/Cabal-2.4.0.1/build/Distribution/Simple/Test/Log.o )

    /tmp/stack29158/Cabal-2.4.1.0/Distribution/Simple/Test/Log.hs:140:31: error:
        • Variable not in scope: totalSuiteq :: Int
        • Perhaps you meant ‘totalSuites’ (line 136)
        |
    140 |     return $! passedSuites == totalSuites
        |                               ^^^^^^^^^^^

patrikj@elit:~/src/ext/IdrisToAgda/toy2$
